--- a/build.gradle
+++ b/build.gradle
@@ -1,49 +1,44 @@
+project.group = "eu.decsis.cmdbuild"
+project.version = "2.3-1.0"
+
 buildscript {
-	ext {
-		springBootVersion = '1.3.3.RELEASE'
-	}
 	repositories {
 		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") 
 	}
 }
 
 apply plugin: 'groovy'
-apply plugin: 'eclipse'
-apply plugin: 'spring-boot' 
+apply plugin: 'maven'
+apply plugin: 'idea'
 
 jar {
 	baseName = 'cmdbuild-rest-client'
 	version = '0.0.1-SNAPSHOT'
 }
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
 
 repositories {
 	mavenCentral()
 }
 
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
-dependencies {
-	compile('org.springframework.boot:spring-boot-starter')
-	compile('org.projectlombok:lombok:1.16.6')
-	compile('org.springframework.retry:spring-retry')
-	compile('org.codehaus.groovy:groovy-all')
-    compile('com.mashape.unirest:unirest-java:1.4.8')
-    testCompile('org.spockframework:spock-spring')
-	testCompile('org.springframework.boot:spring-boot-starter-test') 
+ext{
+	groovyVersion = '2.4.6'
+	logbackVersion = '1.1.7'
 }
-
-
-eclipse {
-	classpath {
-		 containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
-		 containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
+dependencies {
+	compile("org.codehaus.groovy:groovy:$groovyVersion")
+	compile("org.codehaus.groovy:groovy-json:$groovyVersion")
+	compile('com.mashape.unirest:unirest-java:1.4.8')
+	compile('org.slf4j:slf4j-api:1.7.20')
+	testRuntime("ch.qos.logback:logback-classic:$logbackVersion")
+	testRuntime("ch.qos.logback:logback-core:$logbackVersion")
+    testCompile('org.spockframework:spock-core:1.0-groovy-2.4') {
+		exclude group:'org.codehaus.groovy'
 	}
 }
 
 task wrapper(type: Wrapper) {
-	gradleVersion = '2.9'
+	gradleVersion = '2.12'
 }
